[project]
name = "learn2play"
version = "0.1.0"
description = "A pygame and reinforcement learning demo project"
authors = [
    {name = "Balázs Mosolygó",email = "balazs.mosolygo@uib.no"}
]
license = {text = "Apache"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
